[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
poetry = "^1.1.13"
lyrics-extractor = "^3.0.1"
wikipedia = "^1.4.0"
chistesESP = "^0.0.2"
"amino.fix" = "^2.3.4"
"Amino.py" = "^3.0.4"
youtube_dl = "^2021.12.17"
requests = "^2.27.1"
Flask = "^2.1.2"
gTTS = "^2.2.4"
configparser = "^5.2.0"
fancy-text = "^2.1"
twilio = "^7.9.1"
wsaccel = "^0.6.3"
urllib3 = "^1.26.9"
pip = "^22.1"
amino = "^13.0.1"
PySocks = "^1.7.1"
aiohttp = "^3.8.1"
JSON_minify = "^0.3.0"
websocket = "^0.2.1"
dj-database-url = "^1.2.0"
httpsproxy_urllib2 = "^1.0"
selenium = "^4.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"